# Automacao_Oi_FixaDados

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: functions.py  main.py
app/Automations/: Download_OI_Files.py
app/Objects/: Obj_ApiSpring.py  Obj_ApiSpringBase.py  Obj_Invoice.py  Obj_Logger.py  Obj_UploadFatura.py  Obj_WebAutomation.py
app/Readers/: Leitor_Boleto_OI.py  Leitor_Detalhamentos_OI.py
